# better-streamlit-authenticator

./: config.yaml  demo.py  main.py  pyproject.toml  requirements.txt  setup.py  style.css
streamlit_authenticator/controllers/: authentication_controller.py
streamlit_authenticator/models/: authentication_model.py
streamlit_authenticator/utilities/: hasher.py
streamlit_authenticator/views/: authentication_view.py
tests/: tests.py
